# p2p-chat

./: .gitignore  AGENTS.md  Cargo.toml  planning.md
core/: Cargo.toml
docs/: example.typ  main.typ  ref.bib
p2p-chat-core/: Cargo.toml  flake.nix
p2p-chat-core/src/: lib.rs
p2p-chat-core/src/network/: friends.rs
p2pchat-core/: Cargo.toml
p2pchat-core/src/: lib.rs  main.rs  network.rs  settings.rs
p2pchat-core/src/db/: migrate_db.rs  migration-new.sql  migration.sql  sql_calls.rs  types.rs
p2pchat-core/src/network/: chat.rs  friends.rs  types.rs
p2pchat-core/src/tui/: types.rs
p2pchat-types/: Cargo.toml
p2pchat-types/src/: api.rs  lib.rs  settings.rs
src/: ipc.rs  main.rs  network.rs  settings.rs  setup_tui.rs  tui.rs
src/db/: migration.sql  mod.rs  sql_calls.rs  types.rs
src/network/: chat.rs  friends.rs  signable.rs
src/tui/: types.rs
tui/: AGENTS.md  Cargo.toml
tui/src/: main.rs  setup.rs  tracker.rs  ui.rs
