[package]
name = "p2pchat"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
identify = "0.9.0"
libp2p = { version = "0.56.0", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic", "request-response", "cbor", "identify"] }
uuid = { version = "1.18.1", features = [ "v4", "serde"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
directories = "6.0.0"
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = [ "event-stream" ] }
anyhow = "1.0.100"
tracing = "0.1.44"
tokio-util = "0.7.18"
tokio-rusqlite = "0.7.0"
base64 = "0.22.1"
num_enum = "0.7.5"
postcard = { version = "1.1.3", features = ["alloc"] }
reqwest = { version = "0.13.2", features = ["json"] }
dashmap = "6.1.0"
