[package]
name = "p2pchat-types"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
directories = "6.0.0"
libp2p = "0.56.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
num_enum = "0.7.5"
anyhow = "1.0.100"
