[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
p2pchat-types = { path = "../p2pchat-types" }
tokio = { version = "1", features = ["full"] }
postcard = { version = "1", features = ["alloc"] }
uuid = { version = "1.18.1", features = ["v4"] }
anyhow = "1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
