[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tui"
path = "src/main.rs"

[[bin]]
name = "setup"
path = "src/setup.rs"

[dependencies]
p2pchat-types = { path = "../p2pchat-types" }
tokio = { version = "1", features = ["full"] }
postcard = { version = "1", features = ["alloc"] }
uuid = { version = "1.18.1", features = ["v4"] }
anyhow = "1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
serde = "1.0.228"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0"
base64 = "0.22"
